gccida/c3/use_crosses_set_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/use_crosses_set_p/src/combine.c:12073:34: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = rtuint + ( ( unsigned int)( mode_class_0[( unsigned __int8)v5] - 5) < 2) + 1; 
                                 ^~~~~~~~~~~~
                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/use_crosses_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/use_crosses_set_p/src/combine.c:12134:35: error: expected expression
if ( use_crosses_set_p( *( ( rtx *)x + v8), from_cuid) ) 
                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/use_crosses_set_p/src/obj/combine.o] Error 1
